refactor: list boards by user and update member assignment